# cyber_investment_opt

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
src/power_grid/: __init__.py  criticality.py  matpower.py  model.py
src/scripts/: generate_paper_plots.py  run_full_experiments.py  run_power_grid_case_study.py
tests/: conftest.py  test_full_experiments.py  test_generate_paper_plots.py  test_matpower_parser.py  test_power_grid_model.py
